--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,12 @@
 @import "~bootstrap/dist/css/bootstrap.css";
+
+html, body {
+  height: 100%;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  font-family: 'Poppins', sans-serif;
+}
