:sparkles: feature: added group space page which includes details of the groups and its details

--- a/src/app/main-navbar/main-navbar.component.html
+++ b/src/app/main-navbar/main-navbar.component.html
@@ -33,7 +33,7 @@
             <a class="nav-link" [ngClass]="{'nav-link-highlight': selectedTab == 'createGroup'}"  (click)="goCreateGroupComponent()">Create Group</a>
           </li>
           <li>
-            <a>Group Space</a>
+            <a class="nav-link" [ngClass]="{'nav-link-highlight': selectedTab == 'groupSpace'}"  (click)="goGroupSpaceComponent()">Group Space</a>
           </li>
           <li>
             <a>Request Group</a>
