--- a/src/app/create-group/create-group.component.html
+++ b/src/app/create-group/create-group.component.html
@@ -1,27 +1,20 @@
 <div class="container col-md-10 mt-3">
-  <form>
+  <form role="form" #createGroup="ngForm" (ngSubmit)="onSubmitCreateGroup(createGroup)">
     <div class="form-group">
-      <label for="inputAddress">Group Name</label>
-      <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
+      <label for="groupName">Group Name</label>
+      <input type="text" autocomplete="off" required #groupName="ngModel" class="form-control"
+             id="groupName" placeholder="Group Name" name="groupName" [(ngModel)]="groupModel.groupName">
     </div>
     <div class="form-group">
-      <label for="inputAddress2">Description</label>
-      <textarea type="text" class="form-control" id="inputAddress2"
-                placeholder="Apartment, studio, or floor"></textarea>
+      <label for="groupDesp">Description</label>
+      <textarea type="text" required #groupDesp="ngModel" class="form-control"
+                id="groupDesp" placeholder="Describe group here..." name="groupDesp"
+                [(ngModel)]="groupModel.groupDesp"></textarea>
     </div>
     <div class="form-group">
-      <label for="inputAddress2">Add Members</label>
-      <textarea type="text" class="form-control" id="inputAddress3"
-                placeholder="Apartment, studio, or floor"></textarea>
+      <ejs-multiselect id='localData' name="name" #local="ngModel" [(value)]="value" [(ngModel)]="value"
+                       [dataSource]='userList' [fields]='localFields' [placeholder]='localWaterMark'></ejs-multiselect>
     </div>
-    <div class="form-group">
-      <div class="form-check">
-        <input class="form-check-input" type="checkbox" id="gridCheck">
-        <label class="form-check-label" for="gridCheck">
-          private
-        </label>
-      </div>
-    </div>
-    <button type="submit" class="btn btn-outline-primary">Create</button>
+    <button type="submit" class="btn btn-outline-primary" ejs-button>Create</button>
   </form>
 </div>
