--- a/src/app/support/support.component.html
+++ b/src/app/support/support.component.html
@@ -12,4 +12,4 @@
   </div>
 </div>
 
-<app-dashboard-add-button></app-dashboard-add-button>
+<app-dashboard-add-button [level]="level"></app-dashboard-add-button>
