--- a/src/app/create-group/create-group.component.html
+++ b/src/app/create-group/create-group.component.html
@@ -12,7 +12,7 @@
                 [(ngModel)]="groupModel.groupDesp"></textarea>
     </div>
     <div class="form-group">
-      <ejs-multiselect id='localData' name="name" #local="ngModel" [(value)]="value" [(ngModel)]="value"
+      <ejs-multiselect id='localData' #local="ngModel" [(value)]="value" [(ngModel)]="value"
                        [dataSource]='userList' [fields]='localFields' [placeholder]='localWaterMark'></ejs-multiselect>
     </div>
     <button type="submit" class="btn btn-outline-primary" ejs-button>Create</button>
