--- a/src/app/create-group/create-group.component.html
+++ b/src/app/create-group/create-group.component.html
@@ -12,7 +12,8 @@
                 [(ngModel)]="groupModel.groupDesp"></textarea>
     </div>
     <div class="form-group">
-      <ejs-multiselect id='localData' [dataSource]='userList' [fields]='localFields' [placeholder]='localWaterMark'></ejs-multiselect>
+      <ejs-multiselect id='localData' [(value)]="value" [dataSource]='userList' [fields]='localFields'
+                       [placeholder]='localWaterMark'></ejs-multiselect>
     </div>
     <button type="submit" class="btn btn-outline-primary" ejs-button>Create</button>
   </form>
