--- a/src/app/my-cards/my-cards.component.html
+++ b/src/app/my-cards/my-cards.component.html
@@ -9,7 +9,7 @@
       <button type="button" class="btn btn-outline-info" (click)="openScrollableContent(openShortUrl, cardDetail)">Short
         Url
       </button>
-      <a href="#" class="card-link">Open Url</a>
+      <a href="{{cardDetail.cardUrl}}" target="_blank" class="card-link ml-2">Open Url</a>
     </div>
   </div>
 </div>
