--- a/src/app/main-navbar/main-navbar.component.html
+++ b/src/app/main-navbar/main-navbar.component.html
@@ -12,7 +12,7 @@
             <a class="nav-link" href="#">Notification</a>
           </li>
           <li class="nav-item active">
-            <a class="nav-link" href="#">Logout</a>
+            <a class="nav-link" (click)="onLogout()">Logout</a>
           </li>
         </ul>
       </div>
@@ -27,19 +27,24 @@
         <ul class="list-group">
           <p>hello AKSHYA</p>
           <li>
-            <a class="nav-link" [ngClass]="{'nav-link-highlight': selectedTab == 'dashboard'}"  (click)="goDashboardComponent()">Dashboard</a>
+            <a class="nav-link" [ngClass]="{'nav-link-highlight': selectedTab == 'dashboard'}"
+               (click)="goDashboardComponent()">Dashboard</a>
           </li>
           <li>
-            <a class="nav-link" [ngClass]="{'nav-link-highlight': selectedTab == 'createGroup'}"  (click)="goCreateGroupComponent()">Create Group</a>
+            <a class="nav-link" [ngClass]="{'nav-link-highlight': selectedTab == 'createGroup'}"
+               (click)="goCreateGroupComponent()">Create Group</a>
           </li>
           <li>
-            <a class="nav-link" [ngClass]="{'nav-link-highlight': selectedTab == 'groupSpace'}"  (click)="goGroupSpaceComponent()">Group Space</a>
+            <a class="nav-link" [ngClass]="{'nav-link-highlight': selectedTab == 'groupSpace'}"
+               (click)="goGroupSpaceComponent()">Group Space</a>
           </li>
           <li>
-            <a>Request Group</a>
+            <a class="nav-link" [ngClass]="{'nav-link-highlight': selectedTab == 'requestGroup'}"
+               (click)="goRequestGroupComponent()">Request Group</a>
           </li>
           <li>
-            <a>Analysis</a>
+            <a class="nav-link" [ngClass]="{'nav-link-highlight': selectedTab == 'analysis'}"
+               (click)="goAnalysisComponent()">Analysis</a>
           </li>
         </ul>
       </div>
